--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,7 +2,7 @@ body {
     background-color: var(--background);
     margin: 0;
     top: 0;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -111,4 +111,9 @@ point {
     background-color: var(--secondary-darker);
     border-radius: 4px;
     border: 0px solid #ffffff;
+}
+
+.note {
+    color: var(--secondary);
+    font-size: small;
 }
