--- a/app/css/colors.css
+++ b/app/css/colors.css
@@ -1,5 +1,5 @@
 :root {
-    --text: #fafafa;
+    --text: rgb(250, 250, 250);
     --secondary: rgb(130, 135, 140);
     --secondary-lighter: rgba(190, 194, 199, 1);
     --secondary-darker: rgba(70, 74, 79, 1);
