--- a/app/css/components/bubble.css
+++ b/app/css/components/bubble.css
@@ -48,6 +48,7 @@ seperatorvertical {
 }
 
 bubble-settings {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     gap: 5px;
