--- a/app/css/colors.css
+++ b/app/css/colors.css
@@ -7,7 +7,7 @@
     --background-secondary: rgba(28, 28, 28, 1);
     --separator-horizontal: rgba(62, 62, 62, 0.5);
     --separator-vertical: rgba(45, 45, 45, 0.3);
-    --accent: #0381fe;
+    --accent: #387aff;
     --accent-active: #3e91ff;
     --red: #F07A8C;
 }
